# Astra

./: .editorconfig  .example.env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.armv7  LICENSE  README.md  database.env  deploy.sh  docker-compose.yml  rustfmt.toml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: ci.yml  clippy.yml  lint.yml  rust.yml
migrations/: 20210719140451_initialize.sql  20210719140525_launches.sql  20210719140815_reminders.sql  20210719140820_guilds.sql  20211227015930_apod.sql
scripts/: init.sql
src/: api.rs  bot.rs  constants.rs  extensions.rs  main.rs  models.rs  services.rs
src/api/: common.rs  crew.rs  event.rs  expedition.rs  launch.rs  launcher.rs  manufacturer.rs  mission.rs  rocket.rs  spacecraft.rs  traits.rs  url.rs
src/bot/: api.rs  commands.rs  components.rs  embeds.rs  events.rs  hooks.rs  loops.rs  utils.rs
src/bot/commands/: config.rs  general.rs  get.rs  nasa.rs
src/bot/commands/config/: channel.rs  info.rs  set.rs
src/bot/commands/general/: guilds.rs  leave.rs  ping.rs  prefix.rs
src/bot/commands/nasa/: daily.rs
src/bot/events/: guild_create.rs  interaction_create.rs  reaction_add.rs  ready.rs
src/bot/loops/: apod.rs  launches.rs  reminders.rs
src/extensions/: channel.rs  context.rs  duration.rs  message.rs  user.rs
src/models/: apod.rs  common.rs  event.rs  expedition.rs  launch.rs  launcher.rs  mission.rs  rocket.rs  spacecraft.rs  traits.rs  url.rs
src/services/: config.rs  database.rs  logging.rs
src/services/database/: apod.rs  guild.rs  launch.rs  reminders.rs
