[package]
name = "astra"
version = "0.4.0"
authors = ["Matthew <staalkoper@gmail.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
serde = "1.0.115"
serde_yaml = "0.8.13"
simple_logger = "1.9.0"
chrono = "0.4.19"
regex = "1.3.9"

[dependencies.serenity]
version = "0.9"
features = ["framework", "standard_framework", "rustls_backend", "cache", "collector"]

[dependencies.tokio]
version = "0.2"
features = ["macros"]

[dependencies.sqlx]
version = "0.4"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "offline", "chrono"]

[dependencies.reqwest]
version = "0.11.0"
features = ["json"]
