[package]
name = "astra"
version = "0.5.2"
authors = ["Matthew <dev@mtbk.me>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[dependencies]
log = "0.4"
serde = "1.0"
serde_yaml = "0.8"
simple_logger = "1.9"
chrono = "0.4"
regex = "1.3"
anyhow = "1.0"

[dependencies.serenity]
version = "0.10"
features = ["framework", "standard_framework", "rustls_backend", "cache", "collector", "utils", "unstable_discord_api"]

[dependencies.tokio]
version = "1"
features = ["macros", "time"]

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "offline", "chrono", "migrate"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]
