[package]
name = "astra"
version = "0.6.0"
authors = ["Matthew <dev@mtbk.me>"]
edition = "2021"
readme = "README.md"
license = "Apache-2.0"

[package.metadata.appimage]
assets = [".env"]

[profile.release]
lto = "thin"

[dependencies]
log = "0.4"
serde = "1.0"
chrono = "0.4"
regex = "1.7"
anyhow = "1.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"

[dependencies.fern]
version = "0.6"
features = ["colored"]

[dependencies.serenity]
version = "0.11"
features = ["framework", "standard_framework", "rustls_backend", "cache", "collector", "utils", "unstable_discord_api", "chrono", "model"]

[dependencies.tokio]
version = "1"
features = ["macros", "time", "rt-multi-thread"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "offline", "chrono", "migrate"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "tokio-rustls"]
